--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Fjalla+One&family=Righteous&display=swap"
       rel="stylesheet"
     />
-
     <!-- icon -->
     <script
       src="https://kit.fontawesome.com/4a8b18713a.js"
       crossorigin="anonymous"
     ></script>
-    <script src="main.js" defer></script>
-    <title>shopping site</title>
+
+    <title>clone site</title>
   </head>
   <body>
     <!-- header -->
@@ -51,7 +50,7 @@
       <section class="product_promotion">
         <div class="product_promotion_box">
           <div class="product_promotion_image_area">
-            <li><img src="./img/product/picture1.png" alt="" /></li>
+            <li><img src="./img/product/picture2.png" alt="" /></li>
           </div>
           <div class="product_promotion_info">
             <div class="product_name">
@@ -251,9 +250,13 @@
             </div>
             <div class="footer_customer_info">
               <div class="footer_attention_title">資生堂 お客さま窓口</div>
-              <div class="footer_customer_tel">0120-81-4710</div>
+              <div class="footer_customer_tel">
+                <img src="./img/footer/free_dial-removebg-preview.png" alt="" />
+                0120-81-4710
+              </div>
               <div class="footer_attention_text">
-                受付時間 9:00～17:00 （土・日・祝日・年末年始・夏季休暇等除く）
+                受付時間 9:00～17:00<br />
+                （土・日・祝日・年末年始・夏季休暇等除く）
               </div>
             </div>
           </div>
@@ -263,8 +266,10 @@
               Online Beauty
             </div>
             <div class="footer_attention_text">
-              あなたに合わせた日焼け止めの選び方や、つけ方など<br />
-              パーソナルビューティーパートナーに相談できます。
+              あなたに合わせた日焼け止めの選び方や、つけ方などパーソナルビューティーパートナーに相談できます。
+            </div>
+            <div class="footer_attention_banner_image">
+              <img src="./img/footer/onlinebeauty.png" alt="" />
             </div>
           </div>
         </div>
@@ -274,7 +279,7 @@
           </a>
         </div>
       </div>
-
+      </div>
       <div class="footer_link_box">
         <div class="footer_link">
           <li>
